src/styles/globals.scss
html,
body {
  padding: 0;
  margin: 0;
  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background: #ebebeb;

}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark1) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
}

@media (prefers-color-scheme: light) {
  html {
    color-scheme: dark;
  }
  body {
    color: rgb(0, 0, 0);
    background: #ebebeb;
  }
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 5rem;
}

